Your commit message here

--- a/about.html
+++ b/about.html
@@ -48,6 +48,7 @@
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
         <a href="/">Todo</a>
+        <a href="/logout">Log-out</a>
         </ul>
     </nav>
     <div class="container">
