--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
         <a href="/">Todo</a>
-        </ul>
+        <a href="/logout">Log-out</a>
     </nav>
     <div class="container">
         <h1>Contact</h1>
